tests/gabc-dump/should-fail/bad-staff-lines.gabc
name: bad staff lines;
staff-lines: 1;
%%
(c4) d(d)
